[gd_scene load_steps=3 format=3 uid="uid://bg7wyypdkuv30"]

[ext_resource type="Script" path="res://Menu/escape.gd" id="1_monoj"]
[ext_resource type="Texture2D" uid="uid://cgcjtw1eck748" path="res://icon.svg" id="2_l77yl"]

[node name="Escape" type="Control"]
top_level = true
z_index = 4096
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_monoj")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 0.345098)
position = Vector2(650, 400)
scale = Vector2(11, 7)
texture = ExtResource("2_l77yl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(650, 400)
scale = Vector2(4, 4)
texture = ExtResource("2_l77yl")

[node name="ResumeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 176.0
offset_right = 736.0
offset_bottom = 312.0
scale = Vector2(2, 0.5)
pivot_offset = Vector2(68, 72)
text = "RESUME"
clip_text = true

[node name="RestartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 310.0
offset_right = 736.0
offset_bottom = 446.0
scale = Vector2(2, 0.5)
pivot_offset = Vector2(68, 72)
text = "RESTART"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 600.0
offset_top = 452.0
offset_right = 736.0
offset_bottom = 588.0
scale = Vector2(2, 0.5)
pivot_offset = Vector2(68, 72)
text = "BACK TO MENU"

[connection signal="pressed" from="ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
